example/tlsroute/sslpassthrough/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
spec:
  gatewayClassName: haproxy
  listeners:
    - allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: TLSRoute
      hostname: "*.haproxy"
      name: tls
      port: 31444
      protocol: TLS
      tls:
        mode: Passthrough
