example/tlsroute/sslpassthrough/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute
spec:
  parentRefs:
    - name: tls-gateway
      sectionName: tls
  hostnames:
    - "example.haproxy"
  rules:
    - backendRefs:
        - name: http-echo
          port: 443
